# simple-utils

./: .gitignore  README.md  pyproject.toml
jwt-auth/: README.md  auth.py  database.py  main.py  models.py  test.db
jwt-auth/frontend/: package-lock.json  package.json
jwt-auth/frontend/app/: page.tsx
jwt-auth/frontend/lib/: auth.ts
okta-vite-fastapi/: .env.example  .gitignore  README.md  testenv
okta-vite-fastapi/backend/: auth.py  check_metadata.py  generate_key.py  main.py  middleware.py  requirements.txt  settings.yml
okta-vite-fastapi/frontend/: index.html  package-lock.json  package.json  vite.config.ts
okta-vite-fastapi/frontend/src/: App.css  App.jsx  App.tsx  api.ts  config.js  config.ts  vite-env.d.ts
replace-number-on-image/: main.py
rest-apis-fastapi/: PSYCOPG_COMPARISON.md  requirements.txt  requirements_psycopg.txt
rest-apis-fastapi/app/: database.py  database_psycopg.py  main.py  main_combined_example.py  main_psycopg.py  models.py  schemas.py  utils.py
rest-apis-fastapi/app/routers/: auth.py  auth_psycopg.py  blog.py  blog_psycopg.py
rest-apis-nextjs/: AUTH_GUIDE.md  README.md  package-lock.json  package.json
rest-apis-nextjs/app/: layout.tsx  page.tsx
rest-apis-nextjs/app/(auth)/login/: page.tsx
rest-apis-nextjs/app/(auth)/signup/: page.tsx
rest-apis-nextjs/app/api/health/: route.ts
rest-apis-nextjs/app/blogs/: page.tsx
rest-apis-nextjs/app/components/: Footer.tsx  Navbar.tsx
rest-apis-nextjs/app/dashboard/: page.tsx
rest-apis-nextjs/app/lib/: api.ts  types.ts  useAuth.tsx
(+10 files in other folders)
