[project]
name = "simple-utils"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "scikit-image>=0.26.0",
    "streamlit>=1.52.2",
]

